--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-
+<!DOCTYPE html>
+<html>
+  <head><title>YoRHa Theme Assets</title></head>
+  <body>
+    <h1>🎮 YoRHa UI Assets</h1>
+    <p>Fonts, cursors, and wallpapers for Vencord.</p>
+  </body>
+</html>
